<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">新侨</string>
    <string name="xueyuanjieshao">上海新侨职业技术学院（简称新侨学院）创建于1993年，由上海海外联谊会、上海市海外交流协会、上海市归国华侨联合会、上海中华职业教育社、上海市工商业联合会、中国民主建国会上海市委员会等统战系统的社会团体及民主党派共同举办的民办公益性高职院校；是上海市首批由国家教育部批准独立设置、面向全国招生的全日制民办高职院校之一（1999年），也是上海市首批依法自主招生的高校之一（2005年）。</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login">登 录</string>
    <string name="inputNumber">请输入学号</string>
    <string name="inputPassword">请输入密码</string>
    <string name="rules">XX同学，为了我校师资团队的进步以及学弟学妹未来的课程质量，请为你本学期所选课程的任课教师，打下真实的评分。(评价结果将以数据形式收集于教务处，仅用于提高教师课程教学水平和改进学校教学方式。全程采取匿名形式，不会造成教师对学生的任何印象及给分影响。PS.完成评教将获得50个金币哦~)</string>
    <string name="yourcurrentdollars">你当前金币数</string>
    <string name="perone">个</string>
    <string name="readed">我已阅读，知道了</string>
    <string name="yourallteacher">当前你所有课程老师</string>
    <string name="goremark">去评分</string>
    <string name="hasremarked">已评分</string>
    <string name="remarkrule">评分标准：对该教师本学期所教授课程的各个专项进行独立公正的评价。很满意选择"优";较满意请选"良";一般请选"中";不满意请选"差"。</string>
    <string name="thanksyourattend"> 感谢你的积极参与！</string>
    <string name="confirmfinishevaluating"> 你的评价非常重要，且提交后不能修改</string>
    <string name="hasgiven50dll">已赠金币50个</string>
    <string name="remarkend">评价完成</string>
    <string name="iknow">我知道了</string>
    <string name="icheckagain">我再看看</string>
    <string name="iconfirm">提交</string>
    <string name="close">×</string>
    <string name="remark">评 教</string>
    <string name="remarkruletip">评教规则说明</string>
    <string name="imagedescription">评教规则说明</string>
    <string name="login_title">2014至2015年第一学期</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_teachers">TeachersActivity</string>
    <string name="title_activity_remark">RemarkActivity</string>
    <string name="rank1_unselected">优</string>
    <string name="rank1_selected">√ 优</string>
    <string name="rank2_unselected">良</string>
    <string name="rank2_selected">√ 良</string>
    <string name="rank3_unselected">中</string>
    <string name="rank3_selected">√ 中</string>
    <string name="rank4_unselected">差</string>
    <string name="rank4_selected">√ 差</string>
    <string-array name="remark_array">
        <item >1.备课精心，很清楚诠释教学内容，复杂的知识点讲解的简明易懂。</item>
        <item >2.课堂生动活泼，枯燥的内容也变得有趣，能充分调动我的上课兴趣。</item>
        <item >3.课后作业矢量，难易适中，能认真批改即使反馈。</item>
        <item >4.敬业爱生，一视同仁，不迟到早退，忠于职守。</item>
        <item >5.课后也能协助答疑，主动补差，耐心细致。</item>
    </string-array>
    <string name="image_uri">http://172.30.4.117/image/</string>
    <string name="PicName_pano_qicheshixun_f">pano_qicheshixun_f</string>
    <string name="PicName_pano_qicheshixun_b">pano_qicheshixun_b</string>
    <string name="PicName_pano_qicheshixun_r">pano_qicheshixun_r</string>
    <string name="PicName_pano_qicheshixun_l">pano_qicheshixun_l</string>
    <string name="PicName_pano_qicheshixun_u">pano_qicheshixun_u</string>
    <string name="PicName_pano_qicheshixun_d">pano_qicheshixun_d</string>
    <string name="PicName_pano_jidianshixun_f">pano_jidianshixun_f</string>
    <string name="PicName_pano_jidianshixun_b">pano_jidianshixun_b</string>
    <string name="PicName_pano_jidianshixun_r">pano_jidianshixun_r</string>
    <string name="PicName_pano_jidianshixun_l">pano_jidianshixun_l</string>
    <string name="PicName_pano_jidianshixun_u">pano_jidianshixun_u</string>
    <string name="PicName_pano_jidianshixun_d">pano_jidianshixun_d</string>
    <string name="PicName_pano_zhubaoshixun_f">pano_zhubaoshixun_f</string>
    <string name="PicName_pano_zhubaoshixun_b">pano_zhubaoshixun_b</string>
    <string name="PicName_pano_zhubaoshixun_r">pano_zhubaoshixun_r</string>
    <string name="PicName_pano_zhubaoshixun_l">pano_zhubaoshixun_l</string>
    <string name="PicName_pano_zhubaoshixun_u">pano_zhubaoshixun_u</string>
    <string name="PicName_pano_zhubaoshixun_d">pano_zhubaoshixun_d</string>
    <string name="PicName_pano_shangwushixun_f">pano_shangwushixun_f</string>
    <string name="PicName_pano_shangwushixun_b">pano_shangwushixun_b</string>
    <string name="PicName_pano_shangwushixun_r">pano_shangwushixun_r</string>
    <string name="PicName_pano_shangwushixun_l">pano_shangwushixun_l</string>
    <string name="PicName_pano_shangwushixun_u">pano_shangwushixun_u</string>
    <string name="PicName_pano_shangwushixun_d">pano_shangwushixun_d</string>
    <string name="PicName_pano_guanlishixun_f">pano_guanlishixun_f</string>
    <string name="PicName_pano_guanlishixun_b">pano_guanlishixun_b</string>
    <string name="PicName_pano_guanlishixun_r">pano_guanlishixun_r</string>
    <string name="PicName_pano_guanlishixun_l">pano_guanlishixun_l</string>
    <string name="PicName_pano_guanlishixun_u">pano_guanlishixun_u</string>
    <string name="PicName_pano_guanlishixun_d">pano_guanlishixun_d</string>
    <string name="PicName_pano_waiyushixun_f">pano_waiyushixun_f</string>
    <string name="PicName_pano_waiyushixun_b">pano_waiyushixun_b</string>
    <string name="PicName_pano_waiyushixun_r">pano_waiyushixun_r</string>
    <string name="PicName_pano_waiyushixun_l">pano_waiyushixun_l</string>
    <string name="PicName_pano_waiyushixun_u">pano_waiyushixun_u</string>
    <string name="PicName_pano_waiyushixun_d">pano_waiyushixun_d</string>
    <string name="mooc_main">空中学院</string>
    <string name="mooc_favorite">我的收藏</string>
    <string name="mooc_cache">我的缓存</string>
    <string name="mooc_cachesetting">缓存设置</string>
    <string name="mooc_history">播放历史</string>
    <string name="mooc_paycenter">付费中心</string>

</resources>
