<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/color_light"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_green" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/remarkend"
            android:textColor="@color/color_white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/dialog_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/button_backgroud"
            android:padding="10dp"
            android:text="@string/close"
            android:textColor="@color/color_white"
            android:textSize="26sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/thanksyourattend"
        android:textColor="@color/color_black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/dialog_ok"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_backgroud"
        android:text="@string/iconfirm"
        android:textColor="@color/color_white" />

    <Button
        android:id="@+id/dialog_cancel"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_backgroud"
        android:text="@string/icheckagain"
        android:textColor="@color/color_white" />

</LinearLayout>