<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="10dp" >

    <TextView
        android:id="@+id/remark_item_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/remark_item_rank1"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@color/color_green"
            android:text="@string/rank1_unselected"
            android:textColor="@color/color_white" />

        <Button
            android:id="@+id/remark_item_rank2"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/color_green"
            android:text="@string/rank2_unselected"
            android:textColor="@color/color_white" />

        <Button
            android:id="@+id/remark_item_rank3"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/color_green"
            android:text="@string/rank3_unselected"
            android:textColor="@color/color_white" />

        <Button
            android:id="@+id/remark_item_rank4"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@color/color_green"
            android:text="@string/rank4_unselected"
            android:textColor="@color/color_white" />
    </LinearLayout>

</LinearLayout>