<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_light"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/login_head"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:contentDescription="@string/imagedescription"
            android:scaleType="fitXY" />

        <ImageView
            android:id="@+id/login_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/imagedescription"
            android:padding="10dp"
            android:src="@drawable/evaluating_back" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/login_title"
            android:textColor="@color/color_black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/app_name"
            android:textColor="@color/color_black"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@color/color_white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="8dp" >

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:contentDescription="@string/imagedescription"
                android:src="@drawable/login_userface" />

            <EditText
                android:id="@+id/username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/inputNumber"
                android:text="student@student.com"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@color/color_white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="8dp" >

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:contentDescription="@string/imagedescription"
                android:src="@drawable/login_password" />

            <EditText
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/inputPassword"
                android:text="student"
                android:inputType="textPassword"
                android:textSize="18sp" />
        </LinearLayout>

        <Button
            android:id="@+id/login_bt"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_backgroud"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/color_white"
            android:text="@string/login" />
    </LinearLayout>

</LinearLayout>