<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_green" >

        <ImageView
            android:id="@+id/remark_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:contentDescription="@string/imagedescription"
            android:padding="10dp"
            android:src="@drawable/evaluating_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/remark"
            android:textColor="@color/color_white"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_light"
        android:padding="10dp" >

        <ImageView
            android:id="@+id/teacher_image"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentLeft="true"
            android:background="@drawable/teacher_backgound"
            android:contentDescription="@string/imagedescription"
            android:src="@drawable/te1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/teacher_image"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/teacher_image"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/teacher_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:textColor="@color/color_black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/teacher_course"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_black"
                android:textSize="12sp" />
        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_line" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/remarkrule"
        android:textSize="12sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_line" />

    <ListView
        android:id="@+id/remark_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>